4.x/apps/ppc64le/Calculator-Spring-Boot/composite-op/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: compositeop
  name: compositeop
  namespace: <PROJECT>
spec:
  ports:
  - name: 8005-tcp
    port: 8005
    protocol: TCP
    targetPort: 8005
  selector:
    deploymentconfig: compositeop
  type: ClusterIP
