4.x/apps/ppc64le/Calculator-Spring-Boot/composite-op/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: composite-op
  name: composite-op-mean
  namespace: <PROJECT>
spec:
  host: <DOMAIN>
  path: /composite-op/mean
  port:
    targetPort: 8005-tcp
  to:
    kind: Service
    name: composite-op
    weight: 100
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: composite-op
  name: composite-op-square
  namespace: <PROJECT>
spec:
  host: <DOMAIN>
  path: /composite-op/square
  port:
    targetPort: 8005-tcp
  to:
    kind: Service
    name: composite-op
    weight: 100
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: composite-op
  name: composite-op-cube
  namespace: <PROJECT>
spec:
  host: <DOMAIN>
  path: /composite-op/cube
  port:
    targetPort: 8005-tcp
  to:
    kind: Service
    name: composite-op
    weight: 100
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: composite-op
  name: composite-op-eval
  namespace: <PROJECT>
spec:
  host: <DOMAIN>
  path: /composite-op/eval
  port:
    targetPort: 8005-tcp
  to:
    kind: Service
    name: composite-op
    weight: 100
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: composite-op
  name: composite-op-evalrpnexpr
  namespace: <PROJECT>
spec:
  host: <DOMAIN>
  path: /composite-op/evalrpnexpr
  port:
    targetPort: 8005-tcp
  to:
    kind: Service
    name: composite-op
    weight: 100
  wildcardPolicy: None
